--- a/vue-music/package.json
+++ b/vue-music/package.json
@@ -11,6 +11,9 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "fastclick": "^1.0.6",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
